# MetabolismGraph

./: .gitignore  GNN_LLM.py  GNN_LLM_parallel.py  GNN_LLM_phase2.py  GNN_Main.py  GNN_PlotFigure.py  _quarto.yml  application.qmd  gnn-llm-memory.qmd  gnn.qmd  homeo_rank_50_Claude_memory.md  index.qmd  instruction_homeo_rank_50.md  instruction_homeo_rank_50_parallel.md  instruction_metabolism.md  instruction_metabolism_parallel.md  instruction_phase2_homeostasis.md  instruction_phase2_parallel.md  instruction_simulation_oscillatory.md  instruction_simulation_oscillatory_parallel.md  instruction_simulation_oscillatory_rank_50.md  instruction_simulation_oscillatory_rank_50_parallel.md  introduction.qmd  metabolism_Claude_analysis.md  metabolism_Claude_memory.md  metabolism_Claude_ucb_scores.txt  model.qmd  phase2_homeostasis_Claude_analysis.md  phase2_homeostasis_Claude_memory.md  pyproject.toml  references.qmd  results.qmd  simulation_oscillatory_rank_50_Claude_analysis.md  simulation_oscillatory_rank_50_Claude_memory.md  simulation_oscillatory_rank_50_Claude_ucb_scores.txt  styles.css  tmp_exploration.md  train_metabolism_subprocess.py  training.qmd
config/: dynamics_circadian.yaml  dynamics_light.yaml  dynamics_pure.yaml  dynamics_ultralight.yaml  homeo_rank_50.yaml  iter_096.yaml  iter_116.yaml  metabolism.yaml  metabolism_1.yaml  metabolism_1_Claude.yaml  metabolism_2.yaml  metabolism_Claude.yaml  metabolism_Claude_00.yaml  metabolism_Claude_01.yaml  metabolism_Claude_02.yaml  metabolism_Claude_03.yaml  phase2_debug.yaml  phase2_homeostasis_Claude_00.yaml  (+19 more)
(+26 files in other folders)
