[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MetabolismGraph"
version = "0.1"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "F",
    "E9",
    "PLE",
]

ignore = [
    "F841",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
